# hackernews_getter

./: .gitignore  AGENTS.md  DEVELOPMENT.md  README.md  concat_htmls.py  hacker_spider.py  hngtr.py  html_generator.py  html_img_embedder.py  issue_sender.py  main.py  month_trend.py  origin_page_spider.py  output_embedded.html  pyproject.toml  requirements.txt  story.html  utils.py
.github/workflows/: main.yml  month.yml
src/hackernews/: hacker_spider.py  html_generator.py  html_img_embedder.py  month_trend.py  origin_page_spider.py  utils.py
src/hackernews/handlers/: __init__.py  default.py  xcancel.py
